--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ flutter_analyze:
       - merge_requests
       - master
     changes:
+      - "**/pubspec.yaml"
       - "**/*.dart"
       - "**/test/**/*.dart"
       - .gitlab-ci.yml
@@ -121,6 +122,7 @@ unit_test:
       - merge_requests
       - master
     changes:
+      - "**/pubspec.yaml"
       - programmable_video/lib/**/*
       - programmable_video/test/**/*
       - programmable_video_platform_interface/lib/**/*
