--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   permission_handler: ^10.2.0
   enum_to_string: ^2.0.1
   twilio_programmable_video_platform_interface:
-    path: ../programmable_video_platform_interface
+    git:
+      url: https://github.com/martintrollip/programmable-video.git
+      path: programmable_video_platform_interface
+      ref: d7d9948960685fb1af49666e6ee81e10d52bc841
   twilio_programmable_video_web:
     path: ../programmable_video_web
   collection: ^1.15.0
