--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
       path: programmable_video_platform_interface
       ref: d7d9948960685fb1af49666e6ee81e10d52bc841
   twilio_programmable_video_web:
-    path: ../programmable_video_web
+      url: https://github.com/martintrollip/programmable-video.git
+      path: programmable_video_web
+      ref: d7d9948960685fb1af49666e6ee81e10d52bc841
   collection: ^1.15.0
 
 dev_dependencies:
