--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   twilio_programmable_video_platform_interface:
-    path: ../programmable_video_platform_interface
+    git:
+      url: https://github.com/martintrollip/programmable-video.git
+      path: programmable_video_platform_interface
+      ref: 1.1.1
   js: ^0.6.3
   enum_to_string: ^2.0.1
   dartlin: ^0.6.1
