--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -14,11 +14,15 @@ dependencies:
     sdk: flutter
   permission_handler: ^10.2.0
   enum_to_string: ^2.0.1
+  twilio_programmable_video_platform_interface: any
+  twilio_programmable_video_web: any
+  collection: ^1.15.0
+
+dependency_overrides:
   twilio_programmable_video_platform_interface:
     path: ../programmable_video_platform_interface
   twilio_programmable_video_web:
     path: ../programmable_video_web
-  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
