--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  twilio_programmable_video_platform_interface:
-    path: ../programmable_video_platform_interface
+  twilio_programmable_video_platform_interface: any
   js: ^0.6.3
   enum_to_string: ^2.0.1
   dartlin: ^0.6.1
@@ -24,6 +23,10 @@ dependencies:
 
 dev_dependencies:
   pedantic: ^1.8.0+1
+
+dependency_overrides:
+  twilio_programmable_video_platform_interface:
+    path: ../programmable_video_platform_interface
 
 flutter:
   plugin:
