--- a/programmable_video_platform_interface/pubspec.yaml
+++ b/programmable_video_platform_interface/pubspec.yaml
@@ -1,5 +1,8 @@
 name: twilio_programmable_video_platform_interface
 description: A common platform interface for the programmable_video plugin.
+homepage: https://gitlab.com/twilio-flutter/programmable-video
+repository: https://gitlab.com/twilio-flutter/programmable-video/-/tree/master/programmable_video
+issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
 version: 1.2.0
 
 environment:
