--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -1,5 +1,8 @@
 name: twilio_programmable_video_web
 description: A web implementation of the Twilio Programmable Video Plugin.
+homepage: https://gitlab.com/twilio-flutter/programmable-video
+repository: https://gitlab.com/twilio-flutter/programmable-video/-/tree/master/programmable_video
+issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
 version: 1.2.0
 
 environment:
