--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -14,27 +14,15 @@ dependencies:
     sdk: flutter
   permission_handler: ^11.0.1 
   enum_to_string: ^2.0.1
-  twilio_programmable_video_platform_interface:
-    git:
-      url: https://github.com/martintrollip/programmable-video.git
-      path: programmable_video_platform_interface
-      ref: main
-  twilio_programmable_video_web: 
-    git:
-      url: https://github.com/martintrollip/programmable-video.git
-      path: programmable_video_web
-      ref: main
+  twilio_programmable_video_platform_interface: any
+  twilio_programmable_video_web: any
   collection: ^1.15.0
 
-# For local testing
-#
-# Replace above with twilio_programmable_video_platform_interface: any
-#
-# dependency_overrides:
-#   twilio_programmable_video_platform_interface:
-#     path: ../programmable_video_platform_interface
-#   twilio_programmable_video_web:
-#     path: ../programmable_video_web
+dependency_overrides:
+  twilio_programmable_video_platform_interface:
+    path: ../programmable_video_platform_interface
+  twilio_programmable_video_web:
+    path: ../programmable_video_web
 
 dev_dependencies:
   flutter_test:
