--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -14,11 +14,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  twilio_programmable_video_platform_interface:
-    git:
-      url: https://github.com/martintrollip/programmable-video.git
-      path: programmable_video_platform_interface
-      ref: main
+  twilio_programmable_video_platform_interface: any
   js: ^0.6.3
   enum_to_string: ^2.0.1
   dartlin: ^0.6.1
@@ -28,13 +24,9 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.8.0+1
 
-# For local testing
-#
-# Replace above with twilio_programmable_video_platform_interface: any
-#
-# dependency_overrides:
-#   twilio_programmable_video_platform_interface:
-#     path: ../programmable_video_platform_interface
+dependency_overrides:
+  twilio_programmable_video_platform_interface:
+    path: ../programmable_video_platform_interface
 
 flutter:
   plugin:
