--- a/programmable_video_platform_interface/pubspec.yaml
+++ b/programmable_video_platform_interface/pubspec.yaml
@@ -6,7 +6,7 @@ issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
 version: 1.2.0
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.3.0-0 <4.0.0'
 
 dependencies:
   flutter:
@@ -22,4 +22,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.6
-  build_runner: ^1.10.0
+  build_runner: ^2.0.1
