--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -18,13 +18,13 @@ dependencies:
     git:
       url: https://github.com/martintrollip/programmable-video.git
       path: programmable_video_platform_interface
-      ref: main
+      ref: 1.2.0
   twilio_programmable_video_web: 
     git:
       url: https://github.com/martintrollip/programmable-video.git
       path: programmable_video_web
-      ref: main
-  collection: ^1.15.0
+      ref: 1.2.0
+  collection: ^1.18.0
 
 # For local testing
 #
