--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
     git:
       url: https://github.com/martintrollip/programmable-video.git
       path: programmable_video_platform_interface
-      ref: main
+      ref: 1.2.0
   js: ^0.6.3
   enum_to_string: ^2.0.1
   dartlin: ^0.6.1
