--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -25,13 +25,10 @@ dependencies:
   version: ^2.0.0
   collection: ^1.15.0
 
-# For local testing
-#
-# Replace above with twilio_programmable_video_platform_interface: any
-#
-# dependency_overrides:
-#   twilio_programmable_video_platform_interface:
-#     path: ../programmable_video_platform_interface
+# Comment for local testing
+dependency_overrides:
+  twilio_programmable_video_platform_interface:
+    path: ../programmable_video_platform_interface
 
 flutter:
   plugin:
