--- a/programmable_video/example/pubspec.yaml
+++ b/programmable_video/example/pubspec.yaml
@@ -9,27 +9,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_functions: ^1.0.5
-  rxdart: ^0.27.1
+  cloud_functions: ^4.7.3
+  rxdart: ^0.27.7
   provider: ^5.0.0
-  native_device_orientation: ^1.0.0
+  native_device_orientation: ^1.2.1
   enum_to_string: ^2.0.1
-  recase: ^4.0.0
-  intl: ^0.17.0
-  device_info: ^2.0.2
-  wakelock: ^0.5.6
-  after_layout: ^1.1.0
-  firebase_core: ^1.1.0
-  uuid: ^3.0.4
+  recase: ^4.1.0
+  intl: ^0.19.0
+  device_info: ^2.0.3
+  wakelock_plus: ^1.2.4
+  after_layout: ^1.2.0
+  firebase_core: ^2.30.1
+  uuid: ^3.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  collection: ^1.15.0-nullsafety.4
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_driver:
     sdk: flutter
-  test: ^1.16.5
+  flutter_test:
+    sdk: flutter
   twilio_programmable_video:
     path: ../
 
