--- a/programmable_video_platform_interface/pubspec.yaml
+++ b/programmable_video_platform_interface/pubspec.yaml
@@ -3,23 +3,24 @@ description: A common platform interface for the programmable_video plugin.
 homepage: https://gitlab.com/twilio-flutter/programmable-video
 repository: https://gitlab.com/twilio-flutter/programmable-video/-/tree/master/programmable_video
 issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
-version: 1.2.1
+version: 1.3.0
 
 environment:
   sdk: '>=3.3.0-0 <4.0.0'
+  flutter: '>=3.19.3'
 
 dependencies:
   flutter:
     sdk: flutter
-  meta: ^1.3.0
+  meta: ^1.11.0
   enum_to_string: ^2.0.1
-  plugin_platform_interface: ^2.0.1
-  collection: ^1.15.0
-  dartlin: ^0.6.1
-  equatable: ^2.0.3
+  plugin_platform_interface: ^2.1.8
+  collection: ^1.18.0
+  dartlin: ^0.6.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.0.6
+  mockito: ^5.4.4
   build_runner: ^2.0.1
