--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -3,11 +3,11 @@ description: A web implementation of the Twilio Programmable Video Plugin.
 homepage: https://gitlab.com/twilio-flutter/programmable-video
 repository: https://gitlab.com/twilio-flutter/programmable-video/-/tree/master/programmable_video
 issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
-version: 1.2.1
+version: 1.3.0
 
 environment:
   sdk: '>=3.3.0-0 <4.0.0'
-  flutter: ">=1.20.0"
+  flutter: '>=3.19.3'
 
 dependencies:
   flutter:
@@ -15,20 +15,12 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   twilio_programmable_video_platform_interface:
-    git:
-      url: https://github.com/martintrollip/programmable-video.git
-      path: programmable_video_platform_interface
-      ref: 1.2.1
+    path: ../programmable_video_platform_interface
   js: ^0.7.1
   enum_to_string: ^2.0.1
-  dartlin: ^0.6.1
-  version: ^2.0.0
-  collection: ^1.15.0
-
-# Comment for local testing
-dependency_overrides:
-  twilio_programmable_video_platform_interface:
-    path: ../programmable_video_platform_interface
+  dartlin: ^0.6.3
+  version: ^3.0.2
+  collection: ^1.18.0
 
 flutter:
   plugin:
