--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "dart.lineLength": 240,
     "editor.formatOnSave": true,
     "cSpell.words": [
-        "dartlin"
+        "dartlin",
+        "fullscreen"
     ]
 }
