--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -15,9 +15,10 @@ dependencies:
   permission_handler: ^11.3.1 
   enum_to_string: ^2.0.1
   twilio_programmable_video_platform_interface:
-    path: ../programmable_video_platform_interface
-  twilio_programmable_video_web:
-    path: ../programmable_video_web
+    git:
+      url: https://github.com/martintrollip/programmable-video.git
+      path: programmable_video_platform_interface
+      ref: 1.3.0
   collection: ^1.18.0
 
 dev_dependencies:
@@ -26,6 +27,11 @@ dev_dependencies:
   mockito: ^5.4.4
   build_runner: ^2.0.1
   flutter_lints: ^4.0.0
+
+# uncomment for local dev
+#dependency_overrides:
+#  twilio_programmable_video_platform_interface:
+#    path: ../programmable_video_platform_interface
 
 flutter:
   plugin:
