--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -15,12 +15,20 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   twilio_programmable_video_platform_interface:
-    path: ../programmable_video_platform_interface
+    git:
+      url: https://github.com/martintrollip/programmable-video.git
+      path: programmable_video_platform_interface
+      ref: 1.3.0
   js: ^0.7.1
   enum_to_string: ^2.0.1
   dartlin: ^0.6.3
   version: ^3.0.2
   collection: ^1.18.0
+
+## uncomment for local dev
+#dependency_overrides:
+#  twilio_programmable_video_platform_interface:
+#    path: ../programmable_video_platform_interface
 
 flutter:
   plugin:
