--- a/programmable_video_platform_interface/pubspec.yaml
+++ b/programmable_video_platform_interface/pubspec.yaml
@@ -8,7 +8,7 @@ issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
 # less-clean API. See https://flutter.dev/go/platform-interface-breaking-changes
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,4 +24,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.6
-  build_runner: ^1.10.0
+  build_runner: ^2.0.1
