--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -6,19 +6,19 @@ issue_tracker: https://gitlab.com/twilio-flutter/programmable-video/issues
 version: 1.3.1
 
 environment:
-  sdk: '>=3.3.0-0 <4.0.0'
-  flutter: '>=3.19.3'
+  sdk: ">=3.3.0-0 <4.0.0"
+  flutter: ">=3.19.3"
 
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^11.3.1 
+  permission_handler: ^11.3.1
   enum_to_string: ^2.0.1
   twilio_programmable_video_platform_interface:
     git:
       url: https://github.com/martintrollip/programmable-video.git
       path: programmable_video_platform_interface
-      ref: 1.3.1
+      ref: fix-chrome-122
   collection: ^1.18.0
 
 dev_dependencies:
