--- a/programmable_video/pubspec.yaml
+++ b/programmable_video/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
     git:
       url: https://github.com/martintrollip/programmable-video.git
       path: programmable_video_platform_interface
-      ref: fix-chrome-122
+      ref: 1.3.1
   collection: ^1.18.0
 
 dev_dependencies:
