--- a/programmable_video_web/pubspec.yaml
+++ b/programmable_video_web/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
     git:
       url: https://github.com/martintrollip/programmable-video.git
       path: programmable_video_platform_interface
-      ref: 1.3.1
+      ref: fix-chrome-122
   js: ^0.6.4
   enum_to_string: ^2.0.1
   dartlin: ^0.6.3
