--- a/programmable_video/example/android/app/build.gradle
+++ b/programmable_video/example/android/app/build.gradle
@@ -27,6 +27,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    namespace 'twilio.flutter.programmable_video_example'
+
     compileSdkVersion 31
 
     sourceSets {
