kotlinOptions jvm options

--- a/programmable_video/android/build.gradle
+++ b/programmable_video/android/build.gradle
@@ -42,9 +42,13 @@ android {
         disable 'InvalidPackage'
     }
 
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+   compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 
     buildFeatures {
